--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "alexa-app": "^2.3.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "cheerio": "^0.20.0",
     "lodash": "^4.11.1",
     "mocha": "^2.4.5",
     "request-promise": "^3.0.0"
